2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:      [Patch #3116490] cross-compile support for unix
	* unix/configure    (autoconf-2.59)

2010-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtil.c (TclReToGlob): add extra check for multiple
	inner *s that leads to poor recursive glob matching, defer to
	original RE instead.  tclbench RE var backtrack.

2010-12-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclUtil.c:   silence gcc warning when using -Wwrite-strings
	* generic/tclStrToD.c: silence gcc warning for non-IEEE platforms
	* win/Makefile.in:  [Patch #3116490] cross-compile Tcl mingw32 on unix
	* win/tcl.m4        This makes it possible to cross-compile Tcl/Tk for
	* win/configure.in  Windows (either 32-bit or 64-bit) out-of-the-box
	* win/configure     on UNIX, using mingw-w64 build tools (If Itcl, tdbc
	and Thread take over the latest tcl.m4, they can do that too).

2010-12-01  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclStrToD.c (SetPrecisionLimits, TclDoubleDigits):
	Added meaningless initialization of 'i', 'ilim' and 'ilim1'
	to silence warnings from the C compiler about possible use of
	uninitialized variables, Added a panic to the 'switch' that
	assigns them, to assert that the 'default' case is impossible.
	[Bug 3124675]

2010-12-01  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclBasic.c: fix gcc 64-bit warnings: cast from pointer to
	* generic/tclHash.c:  integer of different size.
	* generic/tclTest.c:
	* generic/tclThreadTest.c:
	* generic/tclStrToD.c: fix gcc(-4.5.2) warning: 'static' is not at
	beginning of declaration.
	* generic/tclPanic.c:  Allow Tcl_Panic() to enter the debugger on win32
	* generic/tclCkalloc.c: use Tcl_Panic() in stead of duplicating the code.

2010-11-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclInt.decls, generic/tclInt.h, generic/tclIntDecls.h:
	* generic/tclStubInit.c: TclFormatInt restored at slot 24