@@ -1,3 +1,9 @@
+2010-12-06  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclBinary.c     [Bug 3129448]: possible over-allocation on 64-bit platforms
+	* generic/tclCkalloc.c
+	* generic/tclTrace.c
+
 2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tcl.m4:      [Patch #3116490] cross-compile support for unix
